@@ -513,7 +513,7 @@ extern List as_mysql_remove_clusters(mysql_conn_t *mysql_conn, uint32_t uid,
 }
 
 extern List as_mysql_get_clusters(mysql_conn_t *mysql_conn, uid_t uid,
-			       slurmdb_cluster_cond_t *cluster_cond)
+				  slurmdb_cluster_cond_t *cluster_cond)
 {
 	char *query = NULL;
 	char *extra = NULL;
