@@ -46,6 +46,11 @@ documents those changes that are of interest to users and admins.
  -- sview - color column keeps reference color when highlighting.
  -- Configuration parameter MaxJobCount changed from 16-bit to 32-bit field.
     The default MaxJobCount was changed from 5,000 to 10,000.
+ -- SLURM commands (squeue, sinfo, etc...) can now go cross-cluster on like
+    linux systems.  Cross-cluster for bluegene to linux and such does not
+    currently work.  You can submit jobs with sbatch.  Salloc and srun are not
+    cross-cluster compatible, and given thier nature to talk to actual compute
+    nodes these will likely never be.
 
 * Changes in SLURM 2.2.0.pre5
 =============================
